--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-------------------------header section starts------------------------->
     <nav class="navbar navbar-expand-sm bg-dark fixed-top shadow border-bottom">            
         <div class="container">
-            <a class="navbar-brand col-sm-2" href="index.html"><img src="images/logo-1.png" alt="logo" class="img-fluid mx-3"> </a>
+            <a class="navbar-brand col-sm-2" href="index.html"><img src="IMAGES/logo-1.png" alt="logo" class="img-fluid mx-3"> </a>
             <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
