--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <table class="table table-borderless">
                         <tr class="text-white">
                             <td>Web Design</td>
-                            <td class="text-end ">80%</td>
+                            <td class="text-end "></td>
                         </tr>
                         <tr>
                             <td colspan="2">
@@ -285,34 +285,47 @@
                     </table>
                     <table class="table table-borderless">
                         <tr class="text-white">
-                            <td>HTML / CSS </td>
-                            <td class="text-end">90%</td>
+                            <td>HTML5 </td>
+                            <td class="text-end"></td>
                         </tr>
                         <tr>
                             <th colspan="2">
                                 <div class="progress">
-                                    <div class="progress-bar1 bg-progres title1" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar1 bg-progres title1" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div> 
                             </th>
                         </tr>
                     </table>
-                    <table class="table table-borderless">
+		    <table class="table table-borderless">
+                        <tr class="text-white">
+                            <td>CSS3</td>
+                            <td class="text-end"></td>
+                        </tr>
+                        <tr>
+                            <th colspan="2">
+                                <div class="progress">
+                                    <div class="progress-bar1 bg-progres title1" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div> 
+                            </th>
+                        </tr>
+                  </table>
+                  <table class="table table-borderless">
                         <tr class="text-white">
                             <td> Bootstrap </td>
-                            <td class="text-end">85%</td>
+                            <td class="text-end"></td>
                         </tr>
                         <tr>
                             <th colspan="2">
                                 <div class="progress">
-                                    <div class="progress-bar2 bg-progres title2" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar2 bg-progres title2" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div> 
                             </th>
                         </tr>
-                    </table>
-                    <table class="table table-borderless">
+                  </table>
+                  <table class="table table-borderless">
                         <tr class="text-white">
                             <td> JavaScript </td>
-                            <td class="text-end">10%</td>
+                            <td class="text-end"></td>
                         </tr>
                         <tr>
                             <th colspan="2">
@@ -321,15 +334,14 @@
                                 </div> 
                             </th>
                         </tr>
-                    </table>
-                        
+                   </table>    
                 </div>
                 
                 <div class="col-sm-6 mx-0 px-5">
                     <table class="table table-borderless">
                         <tr class="text-white">
                             <td> Adobe Photoshop </td>
-                            <td class="text-end">85%</td>
+                            <td class="text-end"></td>
                         </tr>
                         <tr>
                             <th colspan="2">
@@ -341,26 +353,52 @@
                     </table>
                     <table class="table table-borderless">
                         <tr class="text-white">
-                            <td> MS Office </td>
-                            <td class="text-end">70%</td>
+                            <td> Canva </td>
+                            <td class="text-end"></td>
                         </tr>
                         <tr>
                             <th colspan="2">
                                 <div class="progress">
-                                    <div class="progress-bar4 bg-progres title4" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar4 bg-progres title4" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div> 
                             </th>
                         </tr>
                     </table>
                     <table class="table table-borderless">
                         <tr class="text-white">
-                            <td> C/C++ </td>
-                            <td class="text-end">10%</td>
+                            <td> Wordpress </td>
+                            <td class="text-end"></td>
                         </tr>
                         <tr>
                             <th colspan="2">
                                 <div class="progress">
-                                    <div class="progress-bar3  bg-progres title3" role="progressbar" style="width: 10%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar3  bg-progres title3" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div> 
+                            </th>
+                        </tr>
+                    </table>
+		    <table class="table table-borderless">
+                        <tr class="text-white">
+                            <td> .NET Web Form</td>
+                            <td class="text-end">60%</td>
+                        </tr>
+                        <tr>
+                            <th colspan="2">
+                                <div class="progress">
+                                    <div class="progress-bar3  bg-progres title3" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div> 
+                            </th>
+                        </tr>
+                    </table>
+		    <table class="table table-borderless">
+                        <tr class="text-white">
+                            <td> Responsive Design</td>
+                            <td class="text-end"></td>
+                        </tr>
+                        <tr>
+                            <th colspan="2">
+                                <div class="progress">
+                                    <div class="progress-bar3  bg-progres title3" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div> 
                             </th>
                         </tr>
