--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         <tr>
                             <td colspan="2">
                                 <div class="progress">
-                                    <div class="progress-bar bg-progres title" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-progres title" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div> 
                             </td>
                         </tr>
@@ -380,7 +380,7 @@
 		    <table class="table table-borderless">
                         <tr class="text-white">
                             <td> .NET Web Form</td>
-                            <td class="text-end">60%</td>
+                            <td class="text-end"></td>
                         </tr>
                         <tr>
                             <th colspan="2">
