--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                   </table>
                   <table class="table table-borderless">
                         <tr class="text-white">
-                            <td> Bootstrap </td>
+                            <td> JavaScript </td>
                             <td class="text-end"></td>
                         </tr>
                         <tr>
@@ -324,7 +324,7 @@
                   </table>
                   <table class="table table-borderless">
                         <tr class="text-white">
-                            <td> JavaScript </td>
+                            <td> BootStrap </td>
                             <td class="text-end"></td>
                         </tr>
                         <tr>
